--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,3 +1,9 @@
+#==============
+# MESSAGGI GENERICI
+#===============
+
+NotBlank = Questo campo è obbligario
+
 #===============
 # MESSAGGI MOVIE
 #===============
@@ -11,6 +17,9 @@ NotBlank.movie.anno = L'anno è un campo obbligatoriio
 # MESSAGGI ARTIST
 #===============
 artist.duplicati = Questo artista già esiste
-NotBlank.artist.nome = Il nome è un campo obligatorio
-NotBlank.artist.cognome = Il cognome è un campo obligatorio
-NotBlank.artist.dataNascita = La data di nascita è un campo obligatorio
+artist.dataNascita.dopoDataMorte = La data di nascita non può succede la data di morte
+#===============
+# MESSAGGI REGISTER
+#===============
+credendials.username.duplicati = Questo username è già in uso
+user.email.duplicati = A questa mail è già associato un account
