--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -22,4 +22,4 @@ artist.dataNascita.dopoDataMorte = La data di nascita non può succede la data di
 # MESSAGGI REGISTER
 #===============
 credendials.username.duplicati = Questo username è già in uso
-user.email.duplicati = A questa mail è già associato un account
+user.email.duplicati = A questa mail è già associato un altro account
