--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -10,15 +10,15 @@ movie.duplicati = Questo film già esiste
 Min.anno = L'anno deve essere un numero maggiore di 1900
 Max.anno = L'anno deve essere un numero minore di 2023
 NotBlank.movie.titolo = Il titolo è un campo obbligatorio
-NotBlank.movie.anno = L'anno è un campo obbligatoriio
+NotBlank.movie.anno = L'anno è un campo obbligatorio
 
 #===============
 # MESSAGGI ARTIST
 #===============
 artist.duplicati = Questo artista già esiste
-artist.dataNascita.dopoDataMorte = La data di nascita non può succede la data di morte
+artist.dataNascita.dopoDataMorte = La data di nascita non può succedere la data di morte
 #===============
 # MESSAGGI REGISTER
 #===============
 credendials.username.duplicati = Questo username è già in uso
-user.email.duplicati = A questa mail è già associato un altro account
+user.email.duplicati = A questa mail è già associato un account
