--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -20,5 +20,5 @@ artist.dataNascita.dopoDataMorte = La data di nascita non può succedere la data 
 #===============
 # MESSAGGI REGISTER
 #===============
-credendials.username.duplicati = Questo username è già in uso
+credendials.username.duplicati = Questo username è già usato
 user.email.duplicati = A questa mail è già associato un account
